--- a/src/Components/HomeNav/HomeNav.module.css
+++ b/src/Components/HomeNav/HomeNav.module.css
@@ -1,10 +1,10 @@
 .items {
-  align-items: center;
+  /* align-items: center; */
   display: flex;
   font-size: 1.2em;
   justify-content: center;
   padding: 10%;
-  max-height: 300px;
+  /* max-height: 300px; */
 }
 
 .items ul{
