--- a/src/styles/Contact.module.css
+++ b/src/styles/Contact.module.css
@@ -15,13 +15,6 @@
   width: 40vw;
 }
 
-.subBody{
-  display: flex;
-  flex-direction: row;
-  width: 80vw;
-  align-self: flex-end;
-}
-
 .box p {
   padding: 20px 0 10px;
 }
